--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="B:/Desarrollo/Eclipse/GIT/Venta_pasajes/resources/Librerias/JR/commons-digester-2.1.jar"/>
 	<classpathentry kind="lib" path="B:/Desarrollo/Eclipse/GIT/Venta_pasajes/resources/Librerias/JR/commons-logging-1.3.jar"/>
 	<classpathentry kind="lib" path="B:/Desarrollo/Eclipse/GIT/Venta_pasajes/resources/Librerias/AutoCompleter.jar"/>
+	<classpathentry kind="lib" path="B:/Desarrollo/Eclipse/GIT/Venta_pasajes/resources/Librerias/JR/iText-2.1.7.jar"/>
+	<classpathentry kind="lib" path="B:/Desarrollo/Eclipse/GIT/Venta_pasajes/resources/Librerias/pdfbox-2.0.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
